--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Save session array</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <title>Tic Tac Toe</title>
     <script src="main.js"></script>
 
 </head>
